<resources>
    <string name="app_name">EMobile</string>
    <string name="login">LOGIN</string>
    <string name="signups">Not a member? Sign up now</string>
    <string name="register">Register</string>
    <string name="signin">Already a member? Log in me!!</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="appDraweritem1">Friends</string>
    <string name="appDraweritem2">Groups</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="gender">Gender:</string>
    <string name="country">Country:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="personal_information">Personal Information:</string>
    <string name="add_new_image">Add new Image</string>
    <string name="social_links">Social Links</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="friend_request">Friend Request</string>
    <string name="create_topic">Create Topic</string>
    <string name="message">Message</string>
    <string name="topic_title">Topic Title</string>
    <string name="topic_description">Topic Description</string>
    <string name="topicadmin">TopicAdmin</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="e_discussion">E-Discussion</string>
    <string name="string_search">Search</string>
    <string name="search_hint">Search any user or topic</string>
    <string name="interest">Interest</string>
    <string name="skill">Skills</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="contact">Contact</string>
</resources>
